[package]
name = "govern"
version = "0.5.5"
description = "Handles proposal creation, lifecycle, voting, and execution."
edition = "2021"
homepage = "https://tribeca.so"
repository = "https://github.com/TribecaHQ/tribeca"
authors = ["Tribeca Team <team@tribeca.so>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "governance", "tribeca"]

[lib]
crate-type = ["cdylib", "lib"]
name = "govern"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.24.2"
anchor-spl = "^0.24.2"
num-traits = "0.2"
smart-wallet = { path = "../../../goki/programs/smart-wallet", features = ["cpi"], version = "^0.10.2" }
vipers = "^2.0"

[dev-dependencies]
proptest = { version = "1.0" }
