[package]
name = "simple-voter"
version = "0.5.5"
description = "A simple Tribeca voter program where 1 token = 1 vote."
edition = "2021"
homepage = "https://tribeca.so"
repository = "https://github.com/TribecaHQ/tribeca"
authors = ["Tribeca Team <team@tribeca.so>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "governance", "tribeca"]

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_voter"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.24.2"
anchor-spl = "^0.24.2"
govern = { path = "../govern", features = ["cpi"], version = "^0.5.5" }
smart-wallet = { path = "../../../goki/programs/smart-wallet", features = ["cpi"], version = "^0.10.2" }
vipers = "^2.0"
